fix auto lock rank